--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
 <title>Tabung Qurban 2026 - AKAN ID | Wujudkan Qurban Impian Mulai Hari Ini!</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+<!-- Meta Description (SEO - panjang) -->
+<meta name="description" content="Tabung Qurban 2026 Bareng AKAN ID. Mulai menabung qurban sejak sekarang untuk wujudkan qurban impian Anda. Program tabungan qurban yang amanah, transparan, mudah diakses secara online, dan membantu Anda merencanakan ibadah qurban lebih baik.">
+
+<!-- Open Graph (WhatsApp, FB, IG) -->
+<meta property="og:title" content="Tabung Qurban 2026 - AKAN ID">
+<meta property="og:description" content="Mulai tabung qurban hari ini. Amanah, transparan, dan mudah untuk wujudkan qurban impian Anda.">
+<meta property="og:image" content="https://profesionalriset.com/img/logo_akan.png">
+<meta property="og:url" content="https://www.akanid.com/tabung-qurban-2026">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Tabung Qurban 2026 - AKAN ID">
+<meta name="twitter:description" content="Amanah, transparan, dan mudah. Mulai tabung qurban bersama AKAN ID.">
+<meta name="twitter:image" content="https://www.akanid.com/logo.png">
+
+
 <style>
 body { font-family: 'Inter', sans-serif; }
 .gradient-bg { background: linear-gradient(135deg, #064e3b 0%, #065f46 25%, #047857 50%, #059669 75%, #10b981 100%); }
@@ -564,3 +582,4 @@ header.style.transition = 'transform 0.3s ease-in-out';
 </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97cd0fb6b1d5cde6',t:'MTc1NzQ4Nzc2My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
